--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 .contacts {
+    will-change: scroll-position;
     scroll-snap-type: y mandatory;
     scroll-padding: 18px;
     overflow-y: scroll;
@@ -11,6 +12,7 @@
 }
 
 .stickyHeader {
+    will-change: contents;
     position: sticky;
     top: 0;
     background-color: #000;
